Fix cut off select text

--- a/app/client/stylesheets/site.scss
+++ b/app/client/stylesheets/site.scss
@@ -131,7 +131,7 @@ $btn-primary-hover-color: #394574;
 }
 
 .ui.form select {
-  height: 2.5em;
+  height: 3em;
 }
 
 fieldset {
